tests/expectations/parser/program/hex_eof.out
Error [EPAR0370005]: expected : -- found '='
    --> test:3:29
     |
   3 |     function main() { let a = 0x}
     |                             ^
